--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <!--nav bar-->
             <nav class="fixed top-0 w-full bg-white/70 dark:bg-black/70 backdrop-blur border-b border-gray-200 dark:border-gray-800 z-50">
                 <div class="max-w-6xl mx-auto px-6 h-16 flex items-center justify-between">
-                    <h1 class="text-xl font-space text-black dark:text-white">Cosmos</h1>
+                    <h1 class="text-xl font-space text-black dark:text-white">SpaceCode</h1>
             
                 <!--<ul class="hidden md:flex gap-8 text-gray-300">
                     <li class="hover:text-white cursor-pointer">Home</li>
@@ -156,7 +156,7 @@
 
             <!--footer-->
             <footer class="text-center py-7 text-gray-500">
-                <p> ~2025 Stephellite 😊</p>
+                <p> ~ Stephellite 😊(don't forget to toggle theme!)</p>
             </footer>
 
 
